--- a/test1/public/views/home.html
+++ b/test1/public/views/home.html
@@ -39,8 +39,8 @@
                  <!-- buttons -->        
                  <div class="form-group">                       
                     <div class="col-sm-9 col-sm-push-3">       
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-primary" ng-hide="modal_button_submit_hide">Post</button>
+                        <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Post</button>
                     </div>
                  </div> 
             </form>
