--- a/test1/public/views/home.html
+++ b/test1/public/views/home.html
@@ -4,6 +4,10 @@
         <div class="col-xs-12">
             <h1>Add an user</h1>
         </div>
+
+ 
+
+
         
         <div class="col-xs-12 col-sm-6 col-sm-pushf-6"> 
             <form class="form-horizontal" role="form" ng-submit="add_user()">
@@ -28,13 +32,21 @@
                         <input type="text" class="form-control" id="user_id" name="user_id" placeholder="Enter ID number" ng-model="form_user.id">
                     </div>
                  </div>
-                 <!-- Contact number -->
+                 <!-- Date of birth -->
                  <div class="form-group">
                     <label for="user_contact_number" class="col-sm-3 control-label">Date of Birth</label>                        
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" id="user_date_of_birth" name="user_date_of_birth" placeholder="Enter date of birth" ng-model="form_user.date_of_birth">
+                        <div class="input-group">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"> 
+                                </i>
+                            </div>
+                            <input class="form-control" id="picker_date_of_birth" name="picker_date_of_birth" placeholder="MM/DD/YYYY" type="text"/>
+                        </div>
                     </div>
                  </div>
+
+                
                                         
                  <!-- buttons -->        
                  <div class="form-group">                       
@@ -67,7 +79,7 @@
                             <td>{{user.name}}</td>
                             <td>{{user.surname}}</td>
                             <td>{{user.id}}</td>
-                            <td>{{user.date_of_birth}}</td>
+                            <td>{{user.date_of_birth | date : 'dd/MM/yyyy'}}</td>
                             <td><button class="btn btn-danger" ng-click="delete_user(user._id)">Delete</button></td>     
                         </tr>
                     </tbody>
