--- a/test1/public/views/home.html
+++ b/test1/public/views/home.html
@@ -6,6 +6,7 @@
         </div>
 
 
+
         
         <div class="col-xs-12 col-sm-6 col-sm-pushf-6"> 
             <form name="my_form "class="form-horizontal" role="form" ng-submit="my_form.$valid && add_user()">
@@ -13,9 +14,10 @@
                  <div class="form-group">
                     <label for="user_name" class="col-sm-3 control-label">Name</label>                        
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" id="user_name" name="user_name" placeholder="Enter Name" ng-model="form_user.name"required>
+                            <input type="text" class="form-control" id="user_name" name="user_name" placeholder="Enter Name" ng-model="form_user.name" pattern="[A-Za-z]{1,50}" required>
                             <span style="color:red" ng-show="my_form.user_name.$dirty && my_form.user_name.$invalid && form_user.name!=''">
                                 <span ng-show="my_form.user_name.$error.required">Name required</span>
+                                <span ng-show="my_form.user_name.$error.pattern">Not a valid name</span>
                             </span>
                         </div>
                  </div>
@@ -23,9 +25,10 @@
                  <div class="form-group">
                     <label for="user_lastname" class="col-sm-3 control-label">Surname</label>                        
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" id="user_lastname" name="user_lastname" placeholder="Enter Surname" ng-model="form_user.surname" required>
+                        <input type="text" class="form-control" id="user_lastname" name="user_lastname" placeholder="Enter Surname" ng-model="form_user.surname" pattern="[A-Za-z]{1,50}" required>
                         <span style="color:red" ng-show="my_form.user_lastname.$dirty && my_form.user_lastname.$invalid && form_user.surname!=''">
                             <span ng-show="my_form.user_lastname.$error.required">Surname required</span>
+                            <span ng-show="my_form.user_lastname.$error.pattern">Not a valid surname</span>
                         </span>
                      </div>
                  </div>
