Added file for csv program
The program is currently generating random records

--- a/test1/public/views/home.html
+++ b/test1/public/views/home.html
@@ -2,7 +2,7 @@
    
     <div class="row row-content">
         <div class="col-xs-12">
-            <h1>Add an user</h1>
+            <h1>Add an user <a class="btn btn-danger pull-right" ui-sref="csv">Go to csv test program</a></h1>
         </div>
 
 
