--- a/test1/public/views/csv_test.html
+++ b/test1/public/views/csv_test.html
@@ -1,46 +1,98 @@
 
 
+<style>
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+/*
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+*/
+
+</style>
+
+
 <div class="container">
    
     <div class="row row-content">
         <div class="col-xs-12">
-            <h1>CSV test program <a class="btn btn-danger pull-right" ui-sref="home">Go to home</a></h1>
+            <h1>CSV test program <a class="btn btn-danger pull-right" ui-sref="home">Go to home</a></h1>    
         </div>
 
-        <div class="col-xs-12 col-sm-6"> 
+        <div class="col-xs-12 col-sm-12"> 
             <form name="my_form "class="form-horizontal" role="form" ng-submit="my_form.$valid && generate_csv_data(form_record.number)">
-                <!-- Name -->
+                <!-- Random records -->
                  <div class="form-group">
-                    <label for="record_number" class="col-sm-4 control-label">Number of records to generate</label>                        
-                        <div class="col-sm-8">
+                    <label for="record_number" class="col-sm-4 control-label">Random records</label>                        
+                        <!-- select the number of records -->
+                        <div class="col-sm-4">
                             <input type="text" class="form-control" id="record_number" name="record_number" placeholder="Enter Number" ng-model="form_record.number" pattern="[0-9]{1,50}" required>
                             <span style="color:red" ng-show="my_form.record_number.$dirty && my_form.record_number.$invalid && form_record.number!=''">
                                 <span ng-show="my_form.record_number.$error.required">Number required</span>
                                 <span ng-show="my_form.record_number.$error.pattern">Not a valid number</span>
                             </span>
+                            <span style="color:green" ng-show="!my_form.record_number.$invalid && generate_success">
+                                <span>Record generate successfully, click on download button next</span>
+                            </span>
+                        </div>
+                        <!-- generate random records -->
+                        <div class="col-sm-4">       
+                        <button  ng-disabled="!my_form.$valid" type="submit" class="btn btn-primary">Generate</button>
                         </div>
                  </div>
-               
-                                        
-                 <!-- buttons -->        
+                
+                 <!-- download csv file -->
                  <div class="form-group">                       
-                    <div class="col-sm-8 col-sm-push-4">       
-                        <button  ng-disabled="!my_form.$valid" type="submit" class="btn btn-primary">Generate random records</button>
+                    <label for="record_number" class="col-sm-4 control-label">download csv file</label>
+                    <div class="col-sm-8">       
+                        <button type="button" class="btn btn-primary" ng-csv="array_to_write_to_csv" csv-header="csv_header" filename="output.csv" ng-click="generate_success=false">Download csv file</button>
                     </div>
                  </div> 
 
-                 <div class="form-group">                       
-                    <div class="col-sm-8 col-sm-push-4">       
-                        <button type="button" class="btn btn-primary" ng-csv="array_to_write_to_csv" csv-header="csv_header" filename="output.csv">Export csv file</button>
+                <!-- Image upload inline-->
+                <div class="form-group">
+                    <label for="equipmentimage" class="col-sm-4 control-label">Upload csv file</label>                        
+                    <div class="col-sm-8">
+                        <csv-upload ng-model="myData" onchange="angular.element(this).scope().upload_file()">
+                        
                     </div>
-                 </div> 
+                </div>
+                
+
             </form>
         </div>
 
 
 
 
+
+
+
     </div>
+
+    <div class="row row-content">
+        <div class="col-xs-12">
+            <div id="divID">
+                <table>
+                    <tr ng-repeat="x in myData.data">
+                    <td ng-repeat="y in x">{{ y }}</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+
+
 
  </div>
  
